Fix log in button color on mobile

--- a/src/WebHeader/WebHeader.styl
+++ b/src/WebHeader/WebHeader.styl
@@ -160,4 +160,5 @@
 
 .login-button--dark
 .login-button--dark:hover
-  color #fff
+  +breakpoint("desktop")
+    color #fff
